keys polling pressed

--- a/data/upload.html
+++ b/data/upload.html
@@ -1,4 +1,18 @@
-<form method="post" enctype="multipart/form-data">
-    <input type="file" name="name">
-    <input class="button" type="submit" value="Upload">
-</form>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>My Page Title</title>
+    <link rel="icon" type="image/png" href="/favicon.png">
+</head>
+
+<body>
+
+    <h1>Upload to ESP8266</h1>
+    <form method="post" enctype="multipart/form-data">
+        <input type="file" name="name">
+        <input class="button" type="submit" value="Upload">
+    </form>
+</body>
+
+</html>
