--- a/data/upload.html
+++ b/data/upload.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>My Page Title</title>
+    <title>Upload Page</title>
     <link rel="icon" type="image/png" href="/favicon.png">
 </head>
 
@@ -13,6 +13,29 @@
         <input type="file" name="name">
         <input class="button" type="submit" value="Upload">
     </form>
+
+    <h2>Sample for config.json</h2>
+    Two WLAN configurations are suppoerted.
+    <pre>
+        {
+            "config": [
+                {
+                    "WIFI_SSID": "xyz_ssid_0",
+                    "WIFI_PASSWORD": "xyz_pw_0",
+                    "MQTT_HOST": "10.37.30.103",
+                    "MQTT_PORT": 1883
+                },
+                {
+                    "WIFI_SSID": "xyz_ssid_1",
+                    "WIFI_PASSWORD": "xyz_pw_1",
+                    "MQTT_HOST": "192.168.1.95",
+                    "MQTT_PORT": 1883
+                }
+            ]
+        }
+    </pre>
+<h2>Actual Configurartion</h2>
+    <embed type="text/html" src="config.json" width="400" height="300"> 
 </body>
 
 </html>
