rebbot page with animation

--- a/data/index.html
+++ b/data/index.html
@@ -10,7 +10,14 @@
 
     <h1>IIoT Demonstrator with ESP8266</h1>
     <h2> Web Interface</h2>
-    <a href="/upload">Upload Page e.g. adopt configuration</a>
+    <ul>
+        <li>
+            <a href="/upload">Upload Page e.g. adopt configuration</a>
+        </li>
+        <li>
+            <a href="/reboot">Reboot Arduino, e.g. to actite new configuration</a>
+        </li>
+    </ul>
 
     <h2> RESTfull interface</h2>
 
