--- a/data/upload.html
+++ b/data/upload.html
@@ -14,28 +14,60 @@
         <input class="button" type="submit" value="Upload">
     </form>
 
-    <h2>Sample for config.json</h2>
-    Two WLAN configurations are suppoerted.
+    <h2>Sample for config_wlan.json</h2>
+    Three WLAN and MQTT configurations are suppoerted.
     <pre>
+        [
         {
-            "config": [
-                {
-                    "WIFI_SSID": "xyz_ssid_0",
-                    "WIFI_PASSWORD": "xyz_pw_0",
-                    "MQTT_HOST": "10.37.30.103",
-                    "MQTT_PORT": 1883
-                },
-                {
-                    "WIFI_SSID": "xyz_ssid_1",
-                    "WIFI_PASSWORD": "xyz_pw_1",
-                    "MQTT_HOST": "192.168.1.95",
-                    "MQTT_PORT": 1883
-                }
-            ]
+            "SSID": "AVM_GUEST",
+            "PASSWORD": "***"
+        },
+        {
+            "SSID": "***",
+            "PASSWORD": "***"
+        },
+        {
+            "SSID": "***",
+            "PASSWORD": "***"
         }
+    ]
     </pre>
-<h2>Actual Configurartion</h2>
-    <embed type="text/html" src="config.json" width="400" height="300"> 
+    <h2>Sample for config_mqtt.json</h2>
+    Three MQTT configurations are suppoerted. Selected MQTT array index depends on forund WLAN index.
+    NAME is only used as description, irelevant for connection!
+    <pre>
+        [
+        {
+            "NAME": "public.mqtthq.com",
+            "HOST": "52.13.116.147",
+            "PORT": 1883,
+            "LOGIN": "",
+            "PASSWORD": ""
+        },
+        {
+            "NAME": "NB-105@avm",
+            "HOST": "10.37.30.103",
+            "PORT": 1883,
+            "LOGIN": "",
+            "PASSWORD": ""
+        },
+        {
+            "NAME": "TZE@avm",
+            "HOST": "192.168.1.95",
+            "PORT": 1883,
+            "LOGIN": "",
+            "PASSWORD": ""
+        }
+    ]
+    </pre>
+    <h2>Actual WLAN Configurartion</h2>
+    <embed type="text/html" src="config_wlan.json" width="400" height="300" style="
+    background-color: lightsteelblue;
+">
+    <h2>Actual MQTT Configurartion</h2>
+    <embed type="text/html" src="config_mqtt.json" width="400" height="300" style="
+    background-color: lightsteelblue;
+">
 </body>
 
 </html>
