demo pages test

--- a/data/index.html
+++ b/data/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <title>IIoT Demonstrator</title>
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
