Button bar added

--- a/data/index.html
+++ b/data/index.html
@@ -73,12 +73,9 @@
             <h2>Related</h2>
 
             <ul>
-                <li><a onclick="loadArticle('home.html');">Home</a></li>
-                <li><a onclick="loadArticle('dir');">Show files on ESP.</a></li>
-                <li><a href="#">Oh I do like to be beside the sea</a></li>
-                <li><a href="#">Although in the North of England</a></li>
-                <li><a href="#">It never stops raining</a></li>
-                <li><a href="#">Oh well...</a></li>
+                <li><button onclick="loadArticle('home.html');">Home</button></li>
+                <li><button onclick="loadArticle('dir');">Show files on ESP.</button></li>
+                <li><button> Oh I do like to be beside the sea</button></li>
             </ul>
         </aside>
 
