--- a/data/index.html
+++ b/data/index.html
@@ -7,31 +7,33 @@
     <link rel="stylesheet" href="style.css">
 
     <script>
-        function loadArticle(url) {
+        var param1 = "";
+        function loadArticle(url, param) {
+            param1 = param;
             fetch(url)
                 .then(function (response) {
                     return response.text();
                 })
                 .then(function (html) {
-                    console.log(html);
+                    //console.log(html);
                     const myArticle = document.getElementById("articleId");
-                    myArticle.innerHTML = html   
+                    myArticle.innerHTML = html
                 });
         }
-
     </script>
 </head>
 
-<body onload="loadArticle('home.html');"">
+<body onload="loadArticle('a-home.html');">
     <header>
         <h1>IIoT Demonstrator with ESP8266</h1>
     </header>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Our team</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a onclick="loadArticle('a-home.html');">Home</a></li>
+            <li><a onclick="loadArticle('a-files.html');">Files</a></li>
+            <li><a onclick="loadArticle('a-javascript.html');">Javascript</a></li>
+            <li><a onclick="loadArticle('a-config.html', 'config_main.json');">Config</a></li>
+            <li><a onclick="loadArticle('a-contact.html');">Contact</a></li>
         </ul>
         <img src="logo.png" width="20%">
 
@@ -40,43 +42,17 @@
 
     <main>
         <article id="articleId">
-            <h2> Web Interface</h2>
-            <ul>
-                <li>
-                    <a href="/dir">Show files on ESP.</a>
-                </li>
-                <li>
-                    <a href="/upload">Upload Page e.g. adopt configuration</a>
-                </li>
-                <li>
-                    <a href="/reboot">Reboot Arduino, e.g. to activate new configuration</a>
-                </li>
-            </ul>
+            <h2> ... loading dynamicaly...</h2>
 
-            <h2> RESTfull interface</h2>
-            <ul>
-                <li>
-                    <a href="/json">GET test JSON</a>
-                </li>
-                <li>
-                    <a href="/assembly">GET assembly state as JSON</a>
-                </li>
-            </ul>
-            <h3>JSON Test</h3>
-            <pre><embed type="text/html" src="json" width="400" height="80"> </pre>
-            <h3>Assembly Status</h3>
-            <pre><embed type="application/json" src="assembly" width="400" height="150"> </pre>
-
-            <h2> MQTT Interface</h2>
         </article>
         <aside>
             <h2>Related</h2>
 
-            <ul>
-                <li><button onclick="loadArticle('home.html');">Home</button></li>
-                <li><button onclick="loadArticle('dir');">Show files on ESP.</button></li>
-                <li><button> Oh I do like to be beside the sea</button></li>
-            </ul>
+            <button onclick="loadArticle('a-home.html');">Home</button>
+            <button onclick="loadArticle('dir');">Show files on ESP</button>
+            <button onclick="loadArticle('upload');">Upload Page e.g. adopt configuration</button>
+            <button onclick="loadArticle('/reboot');">Reboot Arduino, e.g. to activate new configuration</button>
+
         </aside>
 
     </main>
