--- a/data/a-javascript.html
+++ b/data/a-javascript.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="lib/codemirror.css">
     <script src="lib/codemirror.js"></script>
     <script src="addon/mode/javascript/javascript.js"></script>
-    <link rel="stylesheet" href="theme/eclipse.css">
-    <link rel="stylesheet" href="theme/material-darker.css">
+    <link rel="stylesheet" href="theme/cobalt.css">
 
     <link rel="stylesheet" href="addon/hint/show-hint.css">
     <script src="addon/hint/javascript-hint.js"></script>
@@ -45,7 +44,7 @@ https://jsfiddle.net/eliranmal/85UZJ/
                 name: "javascript",
                 globalVars: true
             },
-            theme: "material-darker",
+            theme: "cobalt",
             lineNumbers: true,
 
             autoCloseBrackets: true,
