config page rearanged

--- a/data/index.html
+++ b/data/index.html
@@ -51,7 +51,7 @@
             <button onclick="loadArticle('a-home.html');">Home</button>
             <button onclick="loadArticle('dir');">Show files on ESP</button>
             <button onclick="loadArticle('upload');">Upload Page e.g. adopt configuration</button>
-            <button onclick="loadArticle('/reboot');">Reboot Arduino, e.g. to activate new configuration</button>
+            <button onclick="loadArticle('reboot');">Reboot Arduino, e.g. to activate new configuration</button>
 
         </aside>
 
