--- a/data/a-config.html
+++ b/data/a-config.html
@@ -8,11 +8,11 @@
 
 
 
-<h2> Configurations</h2>
-<!-- 
-<h3>MQTT</h3>
-<pre><embed type="text/html" src="config_mqtt.json" width="400" height="100"> </pre>
-<h3>Wifi</h3>
-<pre><embed type="application/json" src="config_wlan.json" width="400" height="100"> </pre>
-
- -->
+<h3>Actual WLAN Configurartion</h3>
+<embed type="text/html" src="config_wlan.json" width="600" height="300" style="
+background-color: lightsteelblue;
+">
+<h3>Actual MQTT Configurartion</h3>
+<embed type="text/html" src="config_mqtt.json" width="600" height="400" style="
+background-color: lightsteelblue;
+">
