dynamic loading aside area

--- a/data/a-config.html
+++ b/data/a-config.html
@@ -1,18 +1,30 @@
-<h2>Configuration</h2>
+<!DOCTYPE html>
+<html>
 
-<script>
-    //var param1 =""; from main script
+<head>
+    <h2>Configuration</h2>
 
-    console.log("param1: ", param1);
-</script>
+    <script>
+        //var param1 =""; from main script
+
+        console.log("param1: ", param1);
+    </script>
+</head>
+
+<body>
+
+    <script>
+        //var param1 =""; from main script
+
+        console.log("param1: ", param1);
+    </script>
+
+    <h3>Actual WLAN Configurartion</h3>
+    <pre id="preId" style="background-color: lightsteelblue; padding:10px;">
+        ... load dynamicaly...
+    </pre>
 
 
+</body>
 
-<h3>Actual WLAN Configurartion</h3>
-<embed type="text/html" src="config_wlan.json" width="600" height="300" style="
-background-color: lightsteelblue;
-">
-<h3>Actual MQTT Configurartion</h3>
-<embed type="text/html" src="config_mqtt.json" width="600" height="400" style="
-background-color: lightsteelblue;
-">
+</html>
