--- a/data/a-files.html
+++ b/data/a-files.html
@@ -13,60 +13,8 @@
         <input class="button" type="submit" value="Upload">
     </form>
 
-    <h2>Sample for config_wlan.json</h2>
-    Three WLAN and MQTT configurations are suppoerted.
-    <pre>
-        [
-        {
-            "SSID": "AVM_GUEST",
-            "PASSWORD": "***"
-        },
-        {
-            "SSID": "***",
-            "PASSWORD": "***"
-        },
-        {
-            "SSID": "***",
-            "PASSWORD": "***"
-        }
-    ]
-    </pre>
-    <h2>Sample for config_mqtt.json</h2>
-    Three MQTT configurations are suppoerted. Selected MQTT array index depends on forund WLAN index.
-    NAME is only used as description, irelevant for connection!
-    <pre>
-        [
-        {
-            "NAME": "public.mqtthq.com",
-            "HOST": "52.13.116.147",
-            "PORT": 1883,
-            "LOGIN": "",
-            "PASSWORD": ""
-        },
-        {
-            "NAME": "NB-105@avm",
-            "HOST": "10.37.30.103",
-            "PORT": 1883,
-            "LOGIN": "",
-            "PASSWORD": ""
-        },
-        {
-            "NAME": "TZE@avm",
-            "HOST": "192.168.1.95",
-            "PORT": 1883,
-            "LOGIN": "",
-            "PASSWORD": ""
-        }
-    ]
-    </pre>
-    <h2>Actual WLAN Configurartion</h2>
-    <embed type="text/html" src="config_wlan.json" width="400" height="300" style="
-    background-color: lightsteelblue;
-">
-    <h2>Actual MQTT Configurartion</h2>
-    <embed type="text/html" src="config_mqtt.json" width="400" height="300" style="
-    background-color: lightsteelblue;
-">
+    <h2>Root Files ESP8266</h2>
+
 </body>
 
 </html>
