file directory loaded dynamicaly

--- a/data/a-files.html
+++ b/data/a-files.html
@@ -14,6 +14,10 @@
     </form>
 
     <h2>Root Files ESP8266</h2>
+    <pre id="preId" style="background-color: lightsteelblue; padding:10px;">
+        ... load dynamicaly...
+    </pre>
+
 
 </body>
 
