--- a/data/a-javascript.html
+++ b/data/a-javascript.html
@@ -3,7 +3,8 @@
 
 <head>
     <title>IIoT Code Mirror</title>
-    <!-- Create a simple CodeMirror instance -->
+    <!--CodeMirror instance -->
+    <!--
     <link rel="stylesheet" href="lib/codemirror.css">
     <script src="lib/codemirror.js"></script>
     <script src="addon/mode/javascript/javascript.js"></script>
@@ -16,28 +17,27 @@
     <script src="addon/edit/closebrackets.js"></script>
     <script src="addon/edit/closetag.js"></script>
     <script src="addon/edit/matchbrackets.js"></script>
-    <script src="addon/edit/trailingspace.js"></script>
-
-
+    <script src="addon/edit/trailingspace.js"></script> 
+-->
 
 </head>
 
 <body>
-    <h2> JavaScript</h2>
-    <h2> Editor</h2>
+    <h2> JavaScript Editor</h2>
     <button onclick="loadCodeMirror()">Load</button>
     <button onclick="saveCodeMirror()">Save</button>
 
-    <textarea id='editor'>
+    <textarea id='editorId'>
         {
             a:"",
               b:7
           }
 </textarea>
 
-<h3>Hint</h3>
-https://jsfiddle.net/eliranmal/85UZJ/
+    <h3>Hint</h3>
+    https://jsfiddle.net/eliranmal/85UZJ/
 
+    <!--     
     <script>
         var editor = CodeMirror.fromTextArea(document.getElementById("editor"), {
             mode: {
@@ -61,19 +61,10 @@ https://jsfiddle.net/eliranmal/85UZJ/
         });
         editor.save();
 
-        function loadCodeMirror() {
-            var c = '{\n  a: "",\n  b: 7\n}\n';
-            editor.setValue(c);
-            console.log("load click");
-            console.log(c);
-        }
 
-        function saveCodeMirror() {
-            var c = editor.getValue();
-            console.log("save click");
-            console.log(c);
-        }
     </script>
+
+     -->
 
 </body>
 
