load javascrtipt automatically

--- a/data/a-javascript.html
+++ b/data/a-javascript.html
@@ -28,10 +28,10 @@
     <button onclick="saveCodeMirror()">Save</button>
 
     <textarea id='editorId'>
-        {
-            a:"",
-              b:7
-          }
+    {
+        a:"test",
+        b:7
+    }
 </textarea>
 
     <h3>Hint</h3>
