--- a/data/index.html
+++ b/data/index.html
@@ -108,6 +108,7 @@
 
             });
             editor.save();
+            loadCodeMirror();
         }
         function loadCodeMirror() {
             fetch(editorUrl)
