store POST service running

--- a/data/a-javascript.html
+++ b/data/a-javascript.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>IIoT Code Mirror</title>
+    <title>JavaSript Editor</title>
     <!--CodeMirror instance -->
     <!--
     <link rel="stylesheet" href="lib/codemirror.css">
@@ -29,13 +29,12 @@
 
     <textarea id='editorId'>
     {
-        a:"test",
-        b:7
+        a:"dynamic loading",
+        b:7,
+        c:18.1818
     }
-</textarea>
+    </textarea>
 
-    <h3>Hint</h3>
-    https://jsfiddle.net/eliranmal/85UZJ/
 
     <!--     
     <script>
