--- a/data/a-files.html
+++ b/data/a-files.html
@@ -8,7 +8,7 @@
 
 <body>
 
-    <form method="post" enctype="multipart/form-data">
+    <form method="post" enctype="multipart/form-data" action="/upload">
         <input type="file" name="name">
         <input class="button" type="submit" value="Upload">
     </form>
