--- a/data/a-javascript.html
+++ b/data/a-javascript.html
@@ -23,11 +23,11 @@
 </head>
 
 <body>
-    <h2> JavaScript Editor</h2>
+    <h3 id="h3Id"> JavaScript ... Editor</h3>
     <button onclick="loadCodeMirror()">Load</button>
     <button onclick="saveCodeMirror()">Save</button>
 
-    <textarea id='editorId'>
+    <textarea id="editorId">
     {
         a:"dynamic loading",
         b:7,
