javascripts submenu (INIT,CYCLIC,EXIT)

--- a/data/index.html
+++ b/data/index.html
@@ -158,7 +158,7 @@
         <ul>
             <li><a onclick="loadMain('a-home.html', 'aa-home.html',0);">Home</a></li>
             <li><a onclick="loadArticle('a-files.html', 'dir');">Files</a></li>
-            <li><a onclick="loadArticle('a-javascript.html', 'test.txt');">Javascript</a></li>
+            <li><a onclick="loadMain('a-javascript.html', 'aa-javascript.html','test.txt');">Javascript</a></li>
             <li><a onclick="loadMain('a-config.html', 'aa-config.html','config_main.json');">Config</a></li>
             <li><a onclick="loadArticle('a-contact.html');">Contact</a></li>
         </ul>
