--- a/data/index.html
+++ b/data/index.html
@@ -184,7 +184,8 @@
             <li><a onclick="loadMain('a-config.html', 'aa-config.html','config_main.json');">Config</a></li>
             <li><a onclick="loadArticle('a-contact.html');">Contact</a></li>
         </ul>
-        <img src="logo.png" width="20%">
+
+        <img class="logo" src="logo.png" >
 
     </nav>
 
@@ -207,7 +208,7 @@
     </main>
 
     <footer>
-        <p id="pFooter">&copy;Copyright 2023 by avm. All rights reversed.</p>
+        <p id="pFooter">&copy;&nbsp;Copyright 2023 by avm. All rights reversed.</p>
     </footer>
 
 </body>
