--- a/data/aa-home.html
+++ b/data/aa-home.html
@@ -1,6 +1,6 @@
 <h3>Home-Menu</h3>
 
-<button onclick="loadArticle('a-home.html');">Home</button>
+<button onclick="loadArticle('a-home.html');"><img class="icon" src="./icons/home.svg" />Home</button>
 <button onclick="loadArticle('dir');">Show files on ESP</button>
 <button onclick="loadArticle('upload');">Upload Page e.g. adopt configuration</button>
 <button onclick="loadArticle('reboot');">Reboot Arduino, e.g. to activate new configuration</button>
