cyclic update of monitored entries

--- a/data/a-files.html
+++ b/data/a-files.html
@@ -14,7 +14,7 @@
     </form>
 
     <h2>Root Files ESP8266</h2>
-    <pre id="preId" style="background-color: lightsteelblue; padding:10px;">
+    <pre id="preId">
         ... load dynamicaly...
     </pre>
 
