--- a/data/a-home.html
+++ b/data/a-home.html
@@ -20,7 +20,7 @@
         <a href="/assembly">GET assembly state as JSON</a>
     </li>
 </ul>
-<h3>JSON Test</h3>
-<pre><embed type="text/html" src="json" width="400" height="80"> </pre>
-<h3>Assembly Status</h3>
-<pre><embed type="application/json" src="assembly" width="400" height="150"> </pre>
+<h2>JSON Test</h2>
+<pre id="jsonId"><embed type="text/html" src="json" width="400" height="80"> </pre>
+<h2>Assembly Status</h2>
+<pre id="assemblyId"><embed type="application/json" src="assembly" width="400" height="150"> </pre>
