--- a/data/a-js-editor.html
+++ b/data/a-js-editor.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <h3 id="h3Id"> JavaScript ... Editor</h3>
+    <h2 id="titleId"> JavaScript ... Editor</h2>
     <button onclick="loadCodeMirror()">Load</button>
     <button onclick="saveCodeMirror()">Save</button>
 
