--- a/data/a-js-monitor.html
+++ b/data/a-js-monitor.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h3 id="h3Id"> JavaScript Monitor</h3>
+    <h2 id="titleId"> JavaScript Monitor</h2>
 
     <textarea id="editorId">
     //dynamic loading ...
@@ -16,6 +16,10 @@
         c:18.1818
     }
     </textarea>
+    <h2> Console</h2>
+    <pre id="consoleId">...</pre>
+    <h2> Error Output</h2>
+    <pre id="errorId">...</pre>
 
 </body>
 
