--- a/data/a-contact.html
+++ b/data/a-contact.html
@@ -1,11 +1,12 @@
 <h2> Contact</h2>
 
 <h3>AVM Engineering AG</h3>
-<p>Gewerbepark 5
+<p class="address">Gewerbepark 5
     <br />
-    CH-9615 Dietfurt
+    <b>CH-9615 Dietfurt</b>
+    
 </p>
-<p>info@avm.swiss
+<p class="address">info@avm.swiss
     <br />
     +41 71 544 60 00
 </p>
