Rebbot button moved to config area

--- a/data/aa-config.html
+++ b/data/aa-config.html
@@ -3,3 +3,4 @@
 <button onclick="loadArticle('a-config.html','config_main.json');">Main</button>
 <button onclick="loadArticle('a-config.html','config_wlan.json');">Wifi</button>
 <button onclick="loadArticle('a-config.html','config_mqtt.json');">MQTT</button>
+<button class="warning" onclick="loadArticle('reboot');">Reboot Arduino, e.g. to activate new configuration</button>
