--- a/data/aa-home.html
+++ b/data/aa-home.html
@@ -3,3 +3,21 @@
 <button onclick="loadArticle('a-home.html');"><img class="icon" src="./icons/home.svg" />Home</button>
 <button onclick="loadArticle('dir');">Show files on ESP</button>
 <button onclick="loadArticle('upload');">Upload Page e.g. adopt configuration</button>
+<div>
+    <fieldset>
+        <legend>Select refresh rate:</legend>
+    
+        <div>
+          <input type="radio" id="off" name="refresh" value="0" onClick="changeRefreshRate(0);">
+          <label for="off">Off</label>
+        </div>
+    
+        <div>
+          <input type="radio" id="fast" name="refresh" value="500" checked onClick="changeRefreshRate(500);">
+          <label for="fast">Fast 0.5ms</label>
+
+          <input type="radio" id="slow" name="refresh" value="5000" onClick="changeRefreshRate(5000);">
+          <label for="slow">Slow 5s</label>
+        </div>
+    </fieldset>
+</div>
