--- a/data/aa-js-monitor.html
+++ b/data/aa-js-monitor.html
@@ -5,3 +5,22 @@
 <button onclick="loadArticle('a-js-monitor.html','init-app.js');">RESTART CYCLIC</button>
 <button onclick="loadArticle('a-js-monitor.html','cyclic-app.js');">Single Run</button>
 <button onclick="loadArticle('a-js-monitor.html','exit-app.js');">Cyclic Run</button>
+
+<div>
+    <fieldset>
+        <legend>Select refresh rate:</legend>
+    
+        <div>
+          <input type="radio" id="off" name="refresh" value="0" onClick="changeRefreshRate(0);">
+          <label for="off">Off</label>
+        </div>
+    
+        <div>
+          <input type="radio" id="fast" name="refresh" value="500" checked onClick="changeRefreshRate(500);">
+          <label for="fast">Fast 0.5ms</label>
+
+          <input type="radio" id="slow" name="refresh" value="5000" onClick="changeRefreshRate(5000);">
+          <label for="slow">Slow 5s</label>
+        </div>
+    </fieldset>
+</div>
